# pgvector_experiment

./: .env.example  .gitignore  Dockerfile.postgres  Dockerfile.python  README.md  create_embeddings.py  db.py  docker-compose.yml  init.sql  main.py  pyproject.toml  query_embeddings.py  query_similar_documents.py
